# PasswordManager

./: .gitignore  README.md
password-manager/: .env  .gitignore  Cargo.toml  db_setup.sh
password-manager/migrations/: 01_create_tables.sql
password-manager/src/: compile_config.rs  database.rs  encryption.rs  main.rs  user_interface.rs
password_manager_client/: Cargo.toml  README.md
password_manager_client/src/: compile_config.rs  main.rs  user_interface.rs
password_manager_server/: Cargo.toml  README.md  db_setup.sh
password_manager_server/migrations/: 01_create_tables.sql
password_manager_server/src/: compile_config.rs  database.rs  main.rs  middleware.rs  routes.rs  test_functions.rs
password_manager_shared/: Cargo.toml
password_manager_shared/src/: lib.rs  models.rs
