[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO change to current version
[dependencies]
rusqlite = "0.32.1"
bcrypt = "*"
aes = "*"
block-modes = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rpassword = "*"
zeroize = "*"
argon2 = "*"
block-padding = "*"
anyhow = "*"
rand_core = "*"
subtle = "2.6"
aes-gcm = "0.10.3"
base64 = "0.22.1"
